--- a/index.html
+++ b/index.html
@@ -4,12 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="CSS/reset.css">
+    <link rel="stylesheet" href="CSS/stayl.css">
+    <title>cookie-stand</title>
 </head>
 <body>
-    <header><a href="sales.html">sales</a></header>
-    <main></main>
-    <footer></footer>
-    <!-- <script src="java/javaScript.js"></script> -->
+    <header>
+        <h1>Cookie Stand</h1>
+        <nav>
+            <ul>
+                <li><a href="locations.html">locations</a></li>
+                <li><a href="sales.html">sales</a></li>
+                <li><a href="contact.html">contact information</a></li>
+                <li><a href="shop.html">shop</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <div><img src="img/chinook.jpg" alt="chinook"></div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis autem id culpa maiores, totam nihil consequatur incidunt ullam, omnis aliquid accusamus sit. Deserunt cumque aut in eligendi, sequi adipisci itaque?
+        Harum, iusto odio eaque similique officiis distinctio perferendis commodi, autem dolores tempore pariatur, saepe totam! Nihil necessitatibus dolores iusto doloremque natus voluptatem optio aperiam itaque quibusdam consequatur, veniam obcaecati adipisci?
+        Rem ipsa quaerat cumque aut quibusdam beatae iure quidem, facere nisi dolorem accusamus voluptas vitae praesentium tempora cum. Laboriosam cumque ducimus eaque assumenda voluptatem quam dolorum, molestiae maiores eligendi libero?
+        Laudantium, nihil quisquam. Excepturi accusamus provident inventore quidem, nihil nam tempore natus exercitationem odit sint id tempora aliquam rem corporis minima quaerat possimus magnam aperiam, deleniti dolorum vero accusantium ipsam.
+        Sed sunt iure quis, asperiores perspiciatis aliquam veniam quae earum fugit, soluta, eos voluptatem eveniet. Quibusdam asperiores rem deserunt hic mollitia aliquid est, laboriosam beatae libero! Expedita excepturi eos minus?
+        Voluptas error doloremque harum quod eveniet eaque, sunt atque sequi hic fugiat consectetur illo odio. Natus, blanditiis illum. Odit officia perspiciatis veniam deserunt debitis dolorem est, voluptate cupiditate natus beatae!
+        Nostrum quas accusantium consequuntur, ratione, quasi et architecto sed placeat odio voluptatibus, sapiente blanditiis ipsa quae omnis? Doloribus ut, inventore quam cumque ipsum soluta omnis quia totam natus aut iusto.
+        Commodi eius, numquam pariatur accusamus tempore adipisci et praesentium, accusantium nulla, voluptatibus incidunt sint aliquid consequatur. Aut sit at alias perferendis voluptate. Esse explicabo error voluptatum libero quis perferendis consequatur?
+        Atque modi sed quidem reiciendis cum vitae quia optio, ea culpa dicta, eligendi consequatur! Minus earum laboriosam ducimus aut natus non esse ut saepe! Enim unde fugit exercitationem eos quae?
+        Doloribus architecto adipisci, autem fuga dignissimos laboriosam commodi ducimus veniam accusantium nobis saepe nesciunt ullam asperiores nam obcaecati, magnam possimus aut repellat itaque, id inventore sit culpa ex? Sunt, voluptas.</p>
+    </main>
+    <footer><h1>powerd by: Hesham</h1></footer>
 </body>
 </html>
