--- a/shop.html
+++ b/shop.html
@@ -6,20 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/stayl.css">
-    <title>sales</title>
+    <title>Shop</title>
 </head>
-<body id="sales">
-    
+<body>
     <header>
-        <h2>Sales</h2>
+        <h2>Shop</h2>
         <a href="index.html">Home</a>
     </header>
     <main>
-        <div id="branch">
-
+        <div id="Shop">
+        <ul>
+            <li><img src="img/cutter.jpeg" alt="cutter">1$</li>
+            <li><img src="img/fish.jpg" alt="fish">2,5$</li>
+            <li><img src="img/frosted-cookie.jpg" alt="frosted">5$</li>
+            <li><img src="img/salmon.png" alt="salmon">20$</li>
+            <li><img src="img/shirt.jpg" alt="shirt">15$</li>
+        </ul>
         </div>
     </main>
-    <footer></footer>
     <script src="java/javaScript.js"></script>
 </body>
 </html>
