--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <h1>Cookie Stand</h1>
         <nav>
             <ul>
-                <li><a href="locations.html">locations</a></li>
+                <!-- <li><a href="locations.html">locations</a></li> -->
                 <li><a href="sales.html">sales</a></li>
-                <li><a href="contact.html">contact information</a></li>
-                <li><a href="shop.html">shop</a></li>
+                <!-- <li><a href="contact.html">contact information</a></li>
+                <li><a href="shop.html">shop</a></li> -->
             </ul>
         </nav>
     </header>
