--- a/sales.html
+++ b/sales.html
@@ -16,8 +16,20 @@
     </header>
     <main>
         <div id="branch">
-
+            
         </div>
+        <form action=""; id="myform">
+            <legend>Adding new branch</legend>
+            <label for="NameBranch">Name Branch:</label><br>
+            <input type="text" id="NameBranch" name="NameBranch"><br>
+            <label for="max">Max of customer:</label><br>
+            <input type="number" id="max" name="max"  min="1"><br><br>
+            <label for="min">Min of customer:</label><br>
+            <input type="number" id="min" name="min"  min="1"><br><br>
+            <label for="avg"> Avg of selse:</label><br>
+            <input type="number" id="avg" name="avg"  min="1"><br><br>
+            <input type="submit" value="Submit">
+        </form>
     </main>
     <footer></footer>
     <script src="java/javaScript.js"></script>
