letting a avg take any number

--- a/sales.html
+++ b/sales.html
@@ -27,7 +27,7 @@
             <label for="min">Min of customer:</label><br>
             <input type="number" id="min" name="min"  min="1"><br><br>
             <label for="avg"> Avg of selse:</label><br>
-            <input type="number" id="avg" name="avg"  min="1"><br><br>
+            <input type="number" id="avg" name="avg"  min="1" step="any"><br><br>
             <input type="submit" value="Submit">
         </form>
     </main>
