Adding css for text

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/stayl.css">
+    <link href='https://fonts.googleapis.com/css?family=Alex Brush' rel='stylesheet'>
     <title>cookie-stand</title>
 </head>
 <body>
@@ -13,10 +14,10 @@
         <h1>Cookie Stand</h1>
         <nav>
             <ul>
-                <!-- <li><a href="locations.html">locations</a></li> -->
+                <li><a href="locations.html">locations</a></li>
                 <li><a href="sales.html">sales</a></li>
-                <!-- <li><a href="contact.html">contact information</a></li>
-                <li><a href="shop.html">shop</a></li> -->
+                <li><a href="contact.html">contact information</a></li>
+                <li><a href="shop.html">shop</a></li>
             </ul>
         </nav>
     </header>
